@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.2.0 [unreleased]
 
+  Added c.t.h.BigDecimalSerialization to allow Hadoop to serialize and deserialize j.m.BigDecimal instances.
+
   Update slf4j to version 1.7.2.
 
   Added coercion support for j.m.BigDecimal.
